--- a/app/elements/custom-dropdown/custom-dropdown.html
+++ b/app/elements/custom-dropdown/custom-dropdown.html
@@ -106,7 +106,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             scrollSelection: {
               type: Array,
-              value: [{value: "test"}, {value: "test"}, {value: "test"}],
+              value: '',
               notify: true
             },
 
