--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../bower_components/paper-slider/paper-slider.html">
 <link rel="import" href="../bower_components/paper-styles/paper-styles-classes.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
@@ -46,6 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add third party elements here -->
 <link rel="import" href="../bower_components/lavu-grid/lavu-grid.html">
 <link rel="import" href="../bower_components/universal-footer/universal-footer.html">
+<!--  -->
 
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
@@ -59,3 +61,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="custom-dropdown/custom-dropdown.html">
 <link rel="import" href="element-aggregator/element-aggregator.html">
 
+<link rel="import" href="download-tester/download-tester.html">
