--- a/app/elements/download-tester/download-tester.html
+++ b/app/elements/download-tester/download-tester.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
     <template>
      <firebase-collection
-      location="https://rbdcdataviz.firebaseio.com/ipedsData/institutions"
+      location="https://datavizimporter.firebaseio.com/ipedsData/institutions"
       data="{{firebaseData}}"
       on-firebase-value="time"> </firebase-collection>
     <div>Hello from <span>{{foo}}</span></div>
