Updated app to include polymer-fire element components.

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
 
+    <firebase-app auth-domain="datavizimporter.firebaseapp.com"
+      database-url="https://datavizimporter.firebaseio.com/"
+      api-key="AIzaSyD4hpTXukFOTSfN682GIn1ZRPWYZYhnuBw">
+    </firebase-app>
+
     <!-- <paper-drawer-panel id="paperDrawerPanel"> -->
 
       <!-- Main Area -->
