--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -32,8 +32,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Other Google elements -->
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
 <link rel="import" href="../bower_components/firebase-element/firebase-auth.html">
-<link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
-<link rel="import" href="../bower_components/firebase-element/firebase-document.html">
+<!-- <link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-document.html"> -->
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
