--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -28,7 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-
+<link rel="import" href="../bower_components/paper-progress/paper-progress.html">
 <!-- Other Google elements -->
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
 <link rel="import" href="../bower_components/firebase-element/firebase-auth.html">
