adding file input to project

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -47,6 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add third party elements here -->
 <link rel="import" href="../bower_components/lavu-grid/lavu-grid.html">
 <link rel="import" href="../bower_components/universal-footer/universal-footer.html">
+<link rel="import" href="../../bower_components/file-input/file-input.html">
 <!--  -->
 
 <!-- Add your elements here -->
