--- a/app/elements/importer-view/importer-view.html
+++ b/app/elements/importer-view/importer-view.html
@@ -18,6 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
     <div>Hello from <span>{{foo}}</span></div>
+    <file-input>Select a File</file-input>
   </template>
   <script>
   (function() {
