--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -62,3 +62,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="element-aggregator/element-aggregator.html">
 
 <link rel="import" href="download-tester/download-tester.html">
+<link rel="import" href="animated-checkmark/animated-checkmark.html">
