Initial Commit of the q-star app

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -60,5 +60,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="chart-specs/chart-specs.html">
 <link rel="import" href="custom-dropdown/custom-dropdown.html">
 <link rel="import" href="element-aggregator/element-aggregator.html">
+<link rel="import" href="q-star/q-star.html">
 
 <link rel="import" href="download-tester/download-tester.html">
