Edited the css, html and javascript of the yes-no-button element

--- a/app/elements/yes-no-button/yes-no-button.html
+++ b/app/elements/yes-no-button/yes-no-button.html
@@ -8,14 +8,6 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<!--
-When using the yes-no-button tag the tag will scale to its container.  
-To place data into the top part of the circle give the tag you are using
-the id of top-circle.
-To place data into the bottom part of the circle give the tag you are using
-the id of bottom-circle.
--->
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <dom-module id="yes-no-button">
@@ -24,7 +16,9 @@ the id of bottom-circle.
       :host {
         display: block;
       }
-      .circle-wrapper {
+      #circleWrapper {
+        height: 50%;
+        width: 50%;
         border-top-left-radius: 500px;
         border-top-right-radius: 500px;
         border-bottom-left-radius: 500px;
@@ -32,48 +26,55 @@ the id of bottom-circle.
         border-style: solid;
         border-color: black;
         border-width: 5%;
+       
       }
-      #top-circle {
+      #topCircle {
         border-top-left-radius: 500px;
         border-top-right-radius: 500px;
         background: green;
       }
-      #bottom-circle {
+      #bottomCircle {
         background: red;
         border-bottom-left-radius: 500px;
         border-bottom-right-radius: 500px;
       }
-      #top-circle,
-      #bottom-circle {
-        line-height: 50%;
+      #topCircle,
+      #bottomCircle {
         margin: auto;
         text-align: center;
+        line-height: 50%;
       }
     </style>
-    <div class="circle-wrapper">
-      <div id="top-circle" onmouseover="topMouseOver()" onmouseout="topMouseOut()"><content select="#top-circle"></content></div>
-      <div id="bottom-circle" onmouseover="bottomMouseOver()" onmouseout="bottomMouseOut()"><content select="#bottom-circle"></content></div>
+    <div id="circleWrapper">
+      <div id="topCircle" onmouseover="topMouseOver()" onmouseout="topMouseOut()">
+        <paper-icon-button icon="check" style="height:50%; width: 50%;">
+        </paper-icon-button>
+      </div>
+      <div id="bottomCircle" onmouseover="bottomMouseOver()" onmouseout="bottomMouseOut()">
+        <paper-icon-button icon="close" style="height:50%; width: 50%;">
+        </paper-icon-button>
+      </div>
     </div>
   </template>
   <script>
-  (function() {
-    'use strict';
-
     Polymer({
       is: 'yes-no-button',
+
+      properties: {
+        
+      }
     });
-  })();
-  function topMouseOver() {
-    document.getElementById("top-circle").style.background = "lightgreen";
+  function topMouseOver() { 
+    this.$.topCircle.style.background = "lightgreen";
   }
   function topMouseOut() {
-    document.getElementById("top-circle").style.background = "green";
+    document.getElementById("topCircle").style.background = "green";
   }
   function bottomMouseOver() {
-    document.getElementById("bottom-circle").style.background = "lightpink";
+    document.getElementById("bottomCircle").style.background = "pink";
   }
   function bottomMouseOut() {
-    document.getElementById("bottom-circle").style.background = "red";
+    document.getElementById("bottomCircle").style.background = "red";
   }
   </script>
 </dom-module>
