--- a/app/test/nav-bar-basic.html
+++ b/app/test/nav-bar-basic.html
@@ -10,31 +10,39 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <html>
-
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>Elements Test Runner</title>
-  <meta charset="UTF-8">
+  <title>nav-bar</title>
 
-  <script src="../../bower_components/webcomponentsjs/webcomponents.min.js"></script>
-  <script src="../../bower_components/web-component-tester/browser.js"></script>
+  <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../bower_components/web-component-tester/browser.js"></script>
+
+  <!-- Step 1: import the element to test -->
+  <link rel="import" href="../elements/nav-bar/nav-bar.html">
+
 </head>
-
 <body>
 
-  <script>
-    WCT.loadSuites([
-      'my-greeting-basic.html',
-      'my-list-basic.html',
-      'firebase-data-importer-basic.html',
-      'chart-example-basic.html',
-      'download-tester-basic.html',
-      'nav-bar-basic.html',
-      'nav-bar-basic.html?dom=shadow'
-    ]);
-  </script>
+<test-fixture id="basic">
+  <template>
+    <nav-bar></nav-bar>
+  </template>
+</test-fixture>
 
+<script>
+  suite('nav-bar tests', function() {
+    var element;
+
+    setup(function() {
+      element = fixture('basic');
+    });
+
+    test('', function() {
+
+    });
+
+  });
+</script>
 
 </body>
-
 </html>
