--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         </paper-toolbar>
 
+        <animated-checkmark text-color="green" icon-color="greenyellow" height="500px" width="500px" length="1000000"></animated-checkmark>
+
         <!-- Main Content -->
         <div class="content">
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
